# SysOps

./: .gitignore  README.md  build.bat  how to build.txt  pom.xml
src/main/: build_all.bat
src/main/c++/: CMakeLists.txt  action_handler.cpp  action_handler.h  build_all.bat  info.txt  instructions.txt  main.cpp  process_inject.cpp  process_inject.h  stealth.cpp  stealth.h  systemlib.cpp
src/main/c++/src/memory_dumper/: CMakeLists.txt  memory_dumper.cpp  memory_dumper.h
src/main/c++/src/stealth/: CMakeLists.txt  stealth.cpp
src/main/c++/src/systemlib/: CMakeLists.txt  action_handler.cpp  action_handler.h  process_inject.cpp  process_inject.h  systemlib.cpp  systemlib.h
src/main/c++/src/unstealth/: CMakeLists.txt  unstealth.cpp  unstealth.h
src/main/java/: CLICommand.java  CLICommunication.java  ChatGPTAPI.java  ChatGPTHandler.java  CommandRegistry.java  ConnectionStream.java  GUI.java  GeminiAPIHandler.java  ImportantCommand.java  Main.java  MemoryDumpCommand.java  OCR.java  ScreenshotHandler.java  StealthCommand.java  SystemLib.java  UnStealthCommand.java  VisionAPI.java
src/main/java/com/sysops/commands/: CLICommand.java  CLICommunication.java  CommandRegistry.java  MemoryDumpCommand.java  StealthCommand.java  UnStealthCommand.java
src/main/java/com/sysops/functions/: ChatGPTAPI.java  MemoryDumpCommand.java  OCR.java  ScreenshotHandler.java  StealthCommand.java  SystemLib.java  UnStealthCommand.java  VisionAPI.java
src/main/java/com/sysops/main/: GUI.java  Main.java
